src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__output_variable_not_allowed_in_class.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error[E019]: A class cannot contain `VAR_INPUT`, `VAR_IN_OUT`, or `VAR_OUTPUT` blocks
  ┌─ <internal>:2:15
  │
2 │         CLASS cls
  │               ^^^ A class cannot contain `VAR_INPUT`, `VAR_IN_OUT`, or `VAR_OUTPUT` blocks
